# rib

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml
.cargo/: config.toml
.github/: FUNDING.yml
assets/: default_config.toml  index_styles.css  navigation_script.js  navigation_styles.css
docs/: release_workflow.md  roadmap.md
src/: book.rs  browser.rs  cli.rs  config.rs  css.rs  default_config.toml  epub.rs  helpers.rs  library.rs  main.rs  style.rs
src/epub/: index.rs  navigation.rs  xhtml.rs
src/helpers/: consts.rs
