[package]
name = "rib"
version = "0.1.0"
edition = "2024"

description = "Minimalist EPUB reader"

[dependencies]
# IO
clap = { version = "4.5.54", features = ["derive"] }
cli-table = {version = "0.5.0", default-features = false} # Disabled features: csv, derive
epub = "2.1.5"
sanitize-filename = "0.6.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
toml = {version = "0.9.10", default-features = false, features = ["std", "serde", "parse"]} # Disabled feature: display
url = "2.5.8"
xml = "1.2.0"

# Paths
directories = "6.0.0"
pathdiff = "0.2.3"

# Error handling
anyhow = "1.0.100"
