[package]

name = "rib"
edition = "2024"

version = "0.1.1"

description = "Browser-based EPUB reader."
repository = "https://github.com/twilight-flower/rib"
readme = "README.md"
license = "MIT"
keywords = ["epub", "ebook"]
categories = ["command-line-utilities"]

rust-version = "1.88.0"
exclude = [".github/workflows/release.yml", "docs/*", ".gitignore", "dist-workspace.toml"]

[dependencies]

# IO
clap = { version = "4.5.54", features = ["derive"] }
cli-table = {version = "0.5.0", default-features = false} # Disabled features: csv, derive
epub = "2.1.5"
sanitize-filename = "0.6.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.148"
toml = {version = "0.9.10", default-features = false, features = ["std", "serde", "parse"]} # Disabled feature: display
url = "2.5.8"
xml = "1.2.0"

# Paths
directories = "6.0.0"
path-clean = "1.0.1"
pathdiff = "0.2.3"

# Error handling
anyhow = "1.0.100"

[profile.dist]

# The profile that 'dist' will build with

inherits = "release"
lto = "thin"
